--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>El titulo del Post</title>
-    <link rel="stylesheet" href="CSS/Estilo.css">
-</head>
-<body>
-    <h1>Aqui vamos a hacer un Blog</h1>
-    <p>Y este es el parrafo de inicio</p>
-</body>
+    <link rel="stylesheet" href="CSS/Estilo.css" />
+  </head>
+  <body>
+    <div id="container">
+      <div id="post">
+        <h1>Titulo Interesante y Atractivo para el Post</h1>
+        <p>
+            Y este es el parrafo de inicio para explicar
+            las cosas que podemos hacer con las ramas
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
