--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabecera">
+        Cabecera
+      </div>
       <div id="post">
         <h1>Titulo Interesante y Atractivo para el Post</h1>
         <p>
