Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,13 @@
             Y este es el parrafo de inicio para explicar
             las cosas que podemos hacer con las ramas
         </p>
+        <p>
+          El comando git merge nos permite crear un nuevo
+          commit con la combinación de dos ramas 
+          (la rama donde nos encontramos cuando ejecutamos
+          el comando y la rama que indiquemos después del
+          comando).
+        </p>
       </div>
     </div>
   </body>
