Modifique la cabecera y el color del body

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Hyperblog <span id="tagline">Tu blog de confianza BB</span>
+        Hyperblog <span id="tagline">Tu blog de cabecera HP</span>
       </div>
       <div id="post">
         <h1>Titulo Interesante y Atractivo para el Post</h1>
