Puse todo dorado y agregue un parrafo mas

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
-        Hyperblog <span id="tagline">Tu blog de confianza BB</span>
+        Hyperblog <span id="tagline">Tu blog de maestro</span>
       </div>
       <div id="post">
         <h1>Titulo Interesante y Atractivo para el Post</h1>
@@ -24,6 +24,9 @@
           (la rama donde nos encontramos cuando ejecutamos
           el comando y la rama que indiquemos después del
           comando).
+        </p>
+        <p>
+          Estoy haciendo conflictos en git
         </p>
       </div>
     </div>
