Color de fondo y logo nuevo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
   <body>
     <div id="container">
       <div id="cabecera">
+        <img id="logo" src="Imagenes/yyu2.png" />
         Hyperblog <span id="tagline">Tu blog de maestro</span>
       </div>
       <div id="post">
