--- a/blogpost.html
+++ b/blogpost.html
@@ -29,6 +29,7 @@
           Estoy haciendo conflictos en git
         </p>
       </div>
+      <div id="footer">Hecho por JBoss &lt;3</div>
     </div>
   </body>
 </html>
