Fondo y cosas del texto arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -27,7 +27,7 @@
           comando).
         </p>
         <p>
-          Estoy haciendo conflictos en git
+          Estoy haciendo conflictos en git y gitHub
         </p>
       </div>
       <div id="footer">Hecho por JBoss &lt;3</div>
