agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
             las cosas que podemos hacer con las ramas
         </p>
         <p>
+          <img src="Imagenes/5.5.png" width="100%">
+        </p>
+        <p>
           El comando git merge nos permite crear un nuevo
           commit con la combinación de dos ramas 
           (la rama donde nos encontramos cuando ejecutamos
