coloque la imagen desde una pagina web

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,22 +16,23 @@
       <div id="post">
         <h1>Titulo Interesante y Atractivo para el Post</h1>
         <p>
-            Y este es el parrafo de inicio para explicar
-            las cosas que podemos hacer con las ramas
+          Y este es el parrafo de inicio para explicar las cosas que podemos
+          hacer con las ramas
         </p>
         <p>
-          <img src="Imagenes/5.5.png" width="100%">
+          <a href="https://imgur.com/f95d5hr">
+            <img
+              src="https://i.imgur.com/f95d5hr.png"
+              title="source: imgur.com"
+              width="100%"
+          /></a>
         </p>
         <p>
-          El comando git merge nos permite crear un nuevo
-          commit con la combinación de dos ramas 
-          (la rama donde nos encontramos cuando ejecutamos
-          el comando y la rama que indiquemos después del
-          comando).
+          El comando git merge nos permite crear un nuevo commit con la
+          combinación de dos ramas (la rama donde nos encontramos cuando
+          ejecutamos el comando y la rama que indiquemos después del comando).
         </p>
-        <p>
-          Estoy haciendo conflictos en git y gitHub
-        </p>
+        <p>Estoy haciendo conflictos en git y gitHub</p>
       </div>
       <div id="footer">Hecho por JBoss &lt;3</div>
     </div>
