I speak english now bitch

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="cabecera">
         <img id="logo" src="Imagenes/yyu2.png" />
-        Hyperblog <span id="tagline">Tu blog de maestro</span>
+        Hyperblog <span id="tagline">Your blog master by BossaGOD</span>
       </div>
       <div id="post">
         <h1>Titulo Interesante y Atractivo para el Post</h1>
